clusters/cluster2/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-ci-cmspoc
  name: grafana-ingress
  namespace: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.localdev.me
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.localdev.me
